--- a/Python/Tkinter/Использование классов.md
+++ b/Python/Tkinter/Использование классов.md
@@ -27,7 +27,7 @@
             s.sort()
             self.label['text'] = ' '.join(s)
 
-Здесь виджеты являются значениями полей объекта типа `Block`, функция-обработчик события нажатия на кнопку устанавливается с помощью свойства кнопки command. В метод мы передаем только сам объект.
+Здесь виджеты являются значениями полей объекта типа `Block`, функция-обработчик события нажатия на кнопку устанавливается с помощью свойства кнопки `command`. В метод мы передаем только сам объект.
 
 Однако, если код будет выглядеть так, то необходимости в классе нет. Смысл появится, если нам потребуется несколько или множество похожих объектов-блоков. Допустим, нам нужно несколько блоков, состоящих из метки, кнопки, поля. Причем у кнопки каждой группы будет своя функция-обработчик клика.
 
@@ -72,7 +72,7 @@
 
 ## Пример 2
 
-В этом примере рассмотрим вариант, когда создаваемых класс не просто будет хранить в своих свойствах ссылка на виджеты `tkinter`, а будет являться их _потомком_.
+В этом примере рассмотрим вариант, когда создаваемых класс не просто будет хранить в своих свойствах ссылки на виджеты `tkinter`, а будет являться их _потомком_.
 
 Начнем с создания отдельного окна с _измененным_ поведением. Объявим класс `App` который будет наследоваться от `tk.Tk`:
 
