Update Лабораторная по моделированию.md

--- a/Labs/Лабораторная по моделированию.md
+++ b/Labs/Лабораторная по моделированию.md
@@ -283,7 +283,7 @@ Jupyter.org доступен без авторизации, но при этом
 
 Генерировать списки со средним временем ожидания необходимо через функцию, в которую будут передаваться все параметры модели, а возвращать функция будет список $w$.
 
-Для подсчета $SL$ также необходимо написать отдельную функцию - она по передаваемому списку $w$ и $M$ будет отдавать $SL$.
+Для подсчета $SL$ также необходимо написать отдельную функцию - она по передаваемому списку $w$ и значению $M$ будет отдавать $SL$.
 
 Для каждого случая (которых, в итоге, получается 20) необходимо нарисовать гистограмму среднего времени ожидания.
 
