Update Лабораторная по моделированию.md

--- a/Labs/Лабораторная по моделированию.md
+++ b/Labs/Лабораторная по моделированию.md
@@ -299,6 +299,6 @@ Jupyter.org доступен без авторизации, но при этом
 
 * Продемонстрировать работу модели с графиками
 * Ответить на вопросы на понимание модели
-* Ответить на вопросы на к написанному коду
+* Ответить на вопросы к написанному коду
 
 Если выполнение / сдача работы затянется - разрешается завершить работу дома и отправить мне Jupyter notebook файл (тот, что с расширением `.ipynb`), но опрос по работе все равно будет проходить очно.
