Update Лабораторная по моделированию.md

--- a/Labs/Лабораторная по моделированию.md
+++ b/Labs/Лабораторная по моделированию.md
@@ -257,6 +257,14 @@ plt.show()
 
 Jupyter.org доступен без авторизации, но при этом работу придется сохранять на компьютер / внешний носитель / в облако и загружать заново каждый раз.
 
+**Примечание**: В Colaboratory может быть установлена старая версия `matplotlib`, и может не работать указанный выше код.
+
+Для обновления версии `matplotlib` необходимо перезапустить среду выполнения (Среда выполнения -> Перезапустить среду выполнения), и далее в отдельной ячейке выполните код:
+
+```Python
+!pip install matplotlib --upgrade
+```
+
 ## Постановка задачи лабораторной работы
 
 В работе необходимо смоделировать работу офиса обслуживания банка для $K \in [1, 10]$.
